--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <div class=box>
         <div class=categories>
             <p class="cat">personal</p>
+            <p class="cat">dev</p>
             <p class="cat">work</p>
             <p class="cat">procastinate</p>
         </div>
@@ -19,6 +20,11 @@
             <p class="lst">
                 <span style="color: var(--color1)">[<a href="https://tonisagrista.com/">homepage</a>]</span>
                 <span style="color: var(--color2)">[<a href="https://mailbox.org/">mail</a>]</span>
+            </p>
+            <p class="lst">
+                <span style="color: var(--color1)">[<a href="https://gitlab.com/langurmonkey">gitlab</a>]</span>
+                <span style="color: var(--color2)">[<a href="https://github.com/langurmonkey">github</a>]</span>
+                <span style="color: var(--color3)">[<a href="https://vcgitlab.iwr.uni-heidelberg.de">vcgitlab</a>]</span>
             </p>
             <p class="lst">
                 <span style="color: var(--color1)">[<a href="https://www.zah.uni-heidelberg.de/institutes/ari/gaia/outreach/gaiasky/">gaiasky</a>]</span>
